[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "fastapi-csrf-jinja"
dynamic = ["version"]
description = "CSRF middleware for FastAPI applications with Jinja template integration."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Juan Lainez", email = "camilolainez@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
]
dependencies = [
    "itsdangerous >=2.0.1,<3.0.0",
    "starlette >=0.14.2",
    "typing-extensions>=4.8.0",
]

[project.urls]
Documentation = "https://github.com/lainezdev/fastapi-csrf-jinja"
Source = "https://github.com/lainezdev/fastapi-csrf-jinja"